--- a/src/app/pages/pdcalc/components/chart/incomerate.html
+++ b/src/app/pages/pdcalc/components/chart/incomerate.html
@@ -6,14 +6,14 @@
                   <ul class="nav">
                       <li class="nav-item">
                           <div class="btn-group">
-                                <a class="btn-light btn" (click)="openDialog()" style="border-radius:0px; padding: 0.5rem 0.5rem; color: #a0a4ad;font-size: 0.8rem;"><i class="fa fa-cog"></i></a>
+                                <a class="btn-default btn" (click)="openCesuaSettingDialog()" style="border-radius:0px; padding: 0.5rem 0.5rem; color: #a0a4ad;font-size: 0.8rem;"><i class="fa fa-cog"></i></a>
                             </div>
                         </li>
                       <li class="nav-item">
-                          <a class="btn-light btn" href="#" style="border-radius:0px; padding: 0.5rem 0.5rem;color: #a0a4ad; font-size: 0.8rem;"><i class="fa fa-address-card"></i></a>
+                          <a class="btn-default btn" href="#" style="border-radius:0px; padding: 0.5rem 0.5rem;color: #a0a4ad; font-size: 0.8rem;"><i class="fa fa-address-card"></i></a>
                       </li>
                       <li class="nav-item">
-                          <a class="btn-light btn" href="#" style="border-radius:0px; padding: 0.5rem 0.5rem;color: #a0a4ad; font-size: 0.8rem;"><i class="fa fa-calendar"></i></a>
+                          <a class="btn-default btn" href="#" style="border-radius:0px; padding: 0.5rem 0.5rem;color: #a0a4ad; font-size: 0.8rem;"><i class="fa fa-calendar"></i></a>
                       </li>
                       <li class="nav-item" style="flex: 1 1 auto;"></li>
                       <li class="nav-item">
