--- a/src/app/pages/pdcalc/components/main.component.html
+++ b/src/app/pages/pdcalc/components/main.component.html
@@ -17,6 +17,13 @@
                 <div class="container-fluid">
                     <div class="row" style="flex-wrap: nowrap;">
                         <div class="col" style="flex: 1 1 auto;position:  relative;padding-left:  0px;padding-right: 0px;">
+                            <button *ngIf="incomerate._hasCustomerCesuan" (click)="savePdCalc()" type="button" class="btn btn-primary btn-sm" style="
+                                position:  absolute;
+                                right: 80px;
+                                top: 10px;
+                                border-radius: 0rem;
+                                z-index: 5;
+                            ">保存测算结果</button>
                             <button type="button" class="btn btn-primary btn-sm" style="
                                 position:  absolute;
                                 right: 0px;
@@ -26,7 +33,7 @@
                             ">查看报告</button>
                             <mat-tab-group [selectedIndex]="activeTabIndex">
                                 <mat-tab label="概率分布测算">
-                                    <chart-incomerate [proposalId]= "proposalId" [selectedIndex]="_selectProposaIndex" [datas]="projectYieldRateData" [graphicDescElRef]="graphicDescDom" [proData]="projectInfo" ></chart-incomerate>
+                                    <chart-incomerate #incomerate [proposalId]= "proposalId" [selectedIndex]="_selectProposaIndex" [datas]="projectYieldRateData" [graphicDescElRef]="graphicDescDom" [proData]="projectInfo" ></chart-incomerate>
                                 </mat-tab>
                                 <mat-tab label="压力情景测试">
                                         <div class="demo-tab-content"></div>
