新增-压力情景

--- a/src/app/pages/navbar/navbar.html
+++ b/src/app/pages/navbar/navbar.html
@@ -23,16 +23,16 @@
     <div class="line"></div>
     <div class="banner">
         <span class="navbar-brand">
-            <img src="/assets/favicon.ico" width="40" height="20" class="d-inline-block align-top" alt="">
-            ABS — 资产证券化分析系统
+            <img src="/assets/img_logo.png" class="d-inline-block align-top" style="margin-right: 10px;">
+            ABS量化分析系统
         </span>
 
         <ul class="nav">
-            <li class="nav-item">
-                <button type="button" class="btn btn-outline-primary  btn-sm">我的产品</button>
+            <li class="nav-item" style="display:  flex;align-items: flex-end;">
+                <a class="btn btn-outline-primary btn-sm">我的产品</a>
             </li>
-            <li class="nav-item">
-                <button type="button" class="btn btn-outline-secondary  btn-sm">添加产品</button>
+            <li class="nav-item" style="display:  flex;align-items: flex-end;">
+                <a class="btn btn-outline-primary btn-sm" target="_blank" href="http://192.168.70.39:8001/cyno">添加产品</a>
             </li>
         </ul>
     </div>
