--- a/src/app/pages/index.scss
+++ b/src/app/pages/index.scss
@@ -1,7 +1,7 @@
 .main-content{
     height: auto;
     min-height: 100%;
-    padding: 100px 50px 40px 50px;
+    padding: 150px 50px 40px 50px;
     background: rgba(248, 248,248, 1);
 
     .function-body {
@@ -26,7 +26,9 @@
     }
 }
 .cyno-body{
-   & > .card-header{
+    padding: 30px;
+   
+    & > .card-header{
         margin-top: 1.2rem;
         padding: 0.75rem 1.25rem 0.3rem 1.25rem;
         background: none;
