--- a/src/app/pages/pdcalc/components/main.component.html
+++ b/src/app/pages/pdcalc/components/main.component.html
@@ -17,13 +17,22 @@
                 <div class="container-fluid">
                     <div class="row" style="flex-wrap: nowrap;">
                         <div class="col" style="flex: 1 1 auto;position:  relative;padding-left:  0px;padding-right: 0px;">
-                            <button *ngIf="incomerate._hasCustomerCesuan" (click)="savePdCalc()" type="button" class="btn btn-primary btn-sm" style="
+                            <button *ngIf="incomerate._hasCustomerCesuan && selectTabIndex < 1" (click)="savePdCalc()" type="button" class="btn btn-primary btn-sm" style="
                                 position:  absolute;
                                 right: 80px;
                                 top: 10px;
                                 border-radius: 0rem;
                                 z-index: 5;
                             ">保存测算结果</button>
+                            <button *ngIf="selectTabIndex > 0" type="button" class="btn btn-light btn-sm" 
+                                (click)="doPrCalcByPara()"
+                                style="
+                                position:  absolute;
+                                right: 80px;
+                                top: 10px;
+                                border-radius: 0rem;
+                                z-index: 5;
+                            ">测算</button>
                             <button type="button" class="btn btn-primary btn-sm" style="
                                 position:  absolute;
                                 right: 0px;
@@ -36,7 +45,7 @@
                                     <chart-incomerate #incomerate [initType]="initType" [proposalId]= "proposalId" [selectedIndex]="_selectProposaIndex" [datas]="projectYieldRateData" [graphicDescElRef]="graphicDescDom" [proData]="projectInfo" ></chart-incomerate>
                                 </mat-tab>
                                 <mat-tab label="压力情景测试">
-                                        <div class="demo-tab-content"></div>
+                                    <pressuresce-main [proData]="projectInfo" [initType]="initType" [proposalId]= "proposalId"></pressuresce-main>
                                 </mat-tab>
                             </mat-tab-group>
                             <div #graphicDescDom style="
