--- a/src/app/pages/pdcalc/components/main.scss
+++ b/src/app/pages/pdcalc/components/main.scss
@@ -10,4 +10,9 @@
             text-align: left;
             font-weight: 700;
     }
+
+    
+    .mat-tab-body-wrapper .mat-tab-body-content{
+        overflow: hidden;
+    }
 }
