--- a/src/scss/body.scss
+++ b/src/scss/body.scss
@@ -5,6 +5,7 @@ body{
     margin: 0;
     padding: 0;
     overflow: auto;
-    font-family: Helvetica Neue,Hiragino Sans GB,stheiti,Microsoft Yahei,\\5FAE\8F6F\96C5\9ED1,tahoma,sans-serif;
+    font-family: Microsoft Yahei,\\5FAE\8F6F\96C5\9ED1,tahoma,sans-serif,Helvetica Neue,Hiragino Sans GB,stheiti;
+    font-weight: 400;
 }
 
