新增压力情景测算功能

--- a/src/app/pages/projects/components/main.component.html
+++ b/src/app/pages/projects/components/main.component.html
@@ -1,8 +1,14 @@
-<div class="card cyno-body function-body projects-main">
-    <mat-tab-group>
+<div class="card cyno-body function-body projects-main" style="position: relative;">
+    <mat-tab-group style="width: 800px;">
         <mat-tab label="我的关注"></mat-tab>
         <mat-tab [label]="item.paramName" *ngFor="let item of marketsLists"></mat-tab>
     </mat-tab-group>
+    <mat-form-field class="example-form-field project-search-field" style="position: absolute; right: 50px; top: 25px;z-index:10;">
+        <input matInput type="text" placeholder="输入名称,代码" [(ngModel)]="searchText" style="font-size: 14px;" (change)="doSearch()"/>
+        <button mat-button matSuffix mat-icon-button (click)="doSearch()">
+            <mat-icon style="font-size: 20px;">search</mat-icon>
+        </button>
+    </mat-form-field>
 <div class="body-table">
     <mat-spinner *ngIf="isLoadingResults" style="position: fixed;top: calc(50vh - 50px);left: calc(50vw - 50px);"></mat-spinner>
     <mat-ext-table [dataSource]="dataSource">
@@ -12,19 +18,19 @@
             <cdk-cell *cdkCellDef="let element=$implicit;let row=$row;" style="flex: 0 0 30px;height: 35px;text-align: left;"> {{row.num}} </cdk-cell>
         </ng-container>
         <ng-container cdkColumnDef="columncesuan">
-            <cdk-header-cell *cdkHeaderCellDef style="flex: 0 0 60px;height: 40px;color: #000;font-weight: 700;"> 测算 </cdk-header-cell>
-            <cdk-cell *cdkCellDef="let element" style="flex: 0 0 60px;height: 35px;text-align: left;"> 
-                <button mat-icon-button style="width: 20px;height: 20px;line-height: 20px;" matTooltip="概率分布测算" (click)="goToCs(0, element)">
-                    <mat-icon fontSet="fa" fontIcon="pie-chart"  style="height:  18px;width:  18px;line-height: 18px;"></mat-icon>
+            <cdk-header-cell *cdkHeaderCellDef style="flex: 0 0 70px;height: 40px;color: #000;font-weight: 700;"> 测算 </cdk-header-cell>
+            <cdk-cell *cdkCellDef="let element" style="flex: 0 0 70px;height: 35px;text-align: left;" class="cesuan-action-column"> 
+                <button mat-icon-button style="width: 30px; height: 30px;line-height: 30px;" matTooltip="概率分布测算" (click)="goToCs(0, element)">
+                    <mat-icon fontSet="fa" fontIcon="fa-pie-chart"  style="font-size: 20px;"></mat-icon>
                 </button>
-                <button mat-icon-button style="width: 20px;height: 20px;line-height: 20px;" matTooltip="情景分析测算" (click)="goToCs(1, element)">
-                    <mat-icon fontSet="fa" fontIcon="fa-sitemap" style="height:  18px;width:  18px;line-height: 18px;"></mat-icon>
+                <button mat-icon-button style="width: 30px; height: 30px;line-height: 30px;" matTooltip="情景分析测算" (click)="goToCs(1, element)">
+                    <mat-icon fontSet="fa" fontIcon="fa-gg-circle" style="font-size: 20px;"></mat-icon>
                 </button>
             </cdk-cell>
         </ng-container>
         <ng-container cdkColumnDef="projectShortName">
-            <cdk-header-cell *cdkHeaderCellDef style="height: 40px;color: #000;font-weight: 700;text-align: left;"> 项目简称 </cdk-header-cell>
-            <cdk-cell *cdkCellDef="let element" style="height: 35px;text-align: left;"> {{element.projectShortName}} </cdk-cell>
+            <cdk-header-cell *cdkHeaderCellDef style="flex: 0 0 70px;height: 40px;color: #000;font-weight: 700;text-align: left;"> 项目简称 </cdk-header-cell>
+            <cdk-cell *cdkCellDef="let element" style="flex: 0 0 70px;height: 35px;text-align: left;"> {{element.projectShortName}} </cdk-cell>
         </ng-container>
         <ng-container cdkColumnDef="projectType">
             <cdk-header-cell *cdkHeaderCellDef style="flex: 0 0 70px;height: 40px;color: #000;font-weight: 700;text-align: left;"> 
@@ -121,8 +127,8 @@
             <cdk-cell *cdkCellDef="let element;" style="flex: 0 0 40px;">
                 <button (click)="addToFavorites(element)" matTooltip="点击关注" (click)="element" mat-icon-button 
                     style="width: 20px;height: 20px;line-height: 20px;"> 
-                    <mat-icon fontSet="fa" fontIcon="fa-star"  style="height:18px;width:18px;line-height: 18px;"
-                    [ngStyle]="{'color': element.isFavorites === 'N' ? '#dacfcf' : 'red'}"></mat-icon>
+                    <mat-icon fontSet="fa" fontIcon="fa-star"  style="height:18px;width:18px;line-height: 18px;font-size: 24px;"
+                    [ngStyle]="{'color': element.isFavorites === 'N' ? '#d8dae5' : '#1fd3c8'}"></mat-icon>
                 </button>
             </cdk-cell>
         </ng-container>
