--- a/src/app/pages/navbar/navbar.html
+++ b/src/app/pages/navbar/navbar.html
@@ -8,11 +8,10 @@
         </nav>
 
         <nav class="nav ">
-            <a class="nav-link active" href="#">首页</a>
-            <a class="nav-link" href="#">产品信息</a>
-            <a class="nav-link" href="#">资产池管理</a>
-            <a class="nav-link" href="#">静/动池分析</a>
-            <a class="nav-link" href="#">系统信息</a>
+            <a class="nav-link active" href="/index/projects/projects">首页</a>
+            <a class="nav-link" href="http://192.168.70.39:8001/cyno/index.html#page/ASSTS03">资产池管理</a>
+            <a class="nav-link" href="javascript:void(0)">静/动池分析</a>
+            <a class="nav-link" href="javascript:void(0)">系统信息</a>
         </nav>
 
         <nav class="nav ">
@@ -29,10 +28,10 @@
 
         <ul class="nav">
             <li class="nav-item" style="display:  flex;align-items: flex-end;">
-                <a class="btn btn-outline-primary btn-sm">我的产品</a>
+                <a class="btn btn-outline-primary btn-sm" href="/index/projects/projects">我的产品</a>
             </li>
             <li class="nav-item" style="display:  flex;align-items: flex-end;">
-                <a class="btn btn-outline-primary btn-sm" target="_blank" href="http://192.168.70.39:8001/cyno">添加产品</a>
+                <a class="btn btn-outline-primary btn-sm" target="_blank" href="http://192.168.70.39:8001/cyno/index.html#page/PROJS01">添加产品</a>
             </li>
         </ul>
     </div>
