--- a/src/app/pages/navbar/navbar.html
+++ b/src/app/pages/navbar/navbar.html
@@ -9,7 +9,7 @@
 
         <nav class="nav ">
             <a class="nav-link active" href="/index/projects/projects">首页</a>
-            <a class="nav-link" href="http://192.168.70.39:8001/cyno/index.html#page/ASSTS03">资产池管理</a>
+            <a class="nav-link" href="/cyno/console/index.html#page/ASSTS03">资产池管理</a>
             <a class="nav-link" href="javascript:void(0)">静/动池分析</a>
             <a class="nav-link" href="javascript:void(0)">系统信息</a>
         </nav>
@@ -31,7 +31,7 @@
                 <a class="btn btn-outline-primary btn-sm" href="/index/projects/projects">我的产品</a>
             </li>
             <li class="nav-item" style="display:  flex;align-items: flex-end;">
-                <a class="btn btn-outline-primary btn-sm" target="_blank" href="http://192.168.70.39:8001/cyno/index.html#page/PROJS01">添加产品</a>
+                <a class="btn btn-outline-primary btn-sm" target="_blank" href="/cyno/console/index.html#page/PROJS01">添加产品</a>
             </li>
         </ul>
     </div>
