优化项目总览界面

--- a/src/app/pages/navbar/navbar.html
+++ b/src/app/pages/navbar/navbar.html
@@ -8,8 +8,8 @@
         </nav>
 
         <nav class="nav ">
-            <a class="nav-link active" href="/index/projects/projects">首页</a>
-            <a class="nav-link" href="/cyno/console/index.html#page/ASSTS03">资产池管理</a>
+            <a class="nav-link active" routerLink="/index/projects/projects">首页</a>
+            <a class="nav-link" href="/cyno/console/index.html#page/ASSTS03" target="_blank">资产池管理</a>
             <a class="nav-link" href="javascript:void(0)">静/动池分析</a>
             <a class="nav-link" href="javascript:void(0)">系统信息</a>
         </nav>
@@ -28,7 +28,7 @@
 
         <ul class="nav">
             <li class="nav-item" style="display:  flex;align-items: flex-end;">
-                <a class="btn btn-outline-primary btn-sm" href="/index/projects/projects">我的产品</a>
+                <a class="btn btn-outline-primary btn-sm" routerLink="/index/projects/projects">我的产品</a>
             </li>
             <li class="nav-item" style="display:  flex;align-items: flex-end;">
                 <a class="btn btn-outline-primary btn-sm" target="_blank" href="/cyno/console/index.html#page/PROJS01">添加产品</a>
